refactorisation du code
transformer listes en flexbox

--- a/menu1.html
+++ b/menu1.html
@@ -31,14 +31,14 @@
 <section>
   <div class="essaie">
     <img class="separateur-m1" src="images/separateur.png" alt="">
-    <h2 class="m-1"><span class="traitm1">Prélude</span></h2>
+    <h2 class="m-1"><em class="traitm1">Prélude</em></h2>
     <img class="separateur-m1" src="images/separateur.png" alt="">
   </div>
  <ul class="ul-m4">
-    <li>ravioles de foie gras accompagnés de leur crème à la truffe <span class="prix">98€</span></li> 
-    <li>Caviar osciètre sur blini a la farine de blé noir <span class="prix">115€</span></li>
-    <li>Homard et espuma de potiron mariné aux zests d'orange <span class="prix">89€</span></li>
-    <li>Foie gras de canard cuit entier, confiture de figue et pain toasté <span class="prix">105€</span></li>
+    <li class="listes">ravioles de foie gras accompagnés de leur crème à la truffe <span class="prix">98€</span></li> 
+    <li class="listes">Caviar osciètre sur blini a la farine de blé noir <span class="prix">115€</span></li>
+    <li class="listes">Homard et espuma de potiron mariné aux zests d'orange <span class="prix">89€</span></li>
+    <li class="listes">Foie gras de canard cuit entier, confiture de figue et pain toasté <span class="prix">105€</span></li>
   </ul>
   </section>
   <!--entrees-->
@@ -46,12 +46,12 @@
   <section>
     <div class="essaie">
       <img class="separateur-m1" src="images/separateur.png" alt="">
-      <h2 class="m-1"><span class="traitm1">Point d'orgue</span></h2>
+      <h2 class="m-1"><em class="traitm1">Point d'orgue</em></h2>
       <img class="separateur-m1" src="images/separateur.png" alt=""></div>
  <ul class="ul-m4">
- <li>Noix de coquilles Saint-jacques sur lit de pure de céleri-rave <span class="prix">102€</span></li>
- <li>Langoustine poêlée, purée de patate douce <span class="prix">205€</span></li>
- <li>Mijoté de queue de boeuf et riz sauvage aux zests de citron <span class="prix">169€</span></li>
+ <li class="listes">Noix de coquilles Saint-jacques sur lit de pure de céleri-rave <span class="prix">102€</span></li>
+ <li class="listes">Langoustine poêlée, purée de patate douce <span class="prix">205€</span></li>
+ <li class="listes">Mijoté de queue de boeuf et riz sauvage aux zests de citron <span class="prix">169€</span></li>
  </ul>
   </section>
   <!--plats-->
@@ -59,13 +59,13 @@
   <section>
     <div class="essaie">
       <img class="separateur-m1" src="images/separateur.png" alt="">
-      <h2 class="m-1"><span class="traitm1">Mouvement final</span></h2>
+      <h2 class="m-1"><em class="traitm1">Mouvement final</em></h2>
       <img class="separateur-m1" src="images/separateur.png" alt="">
     </div>
 <ul class="ul-m4">
- <li>Macaron noisette et chocolat, glace au caramel brun et sel de Guérende</li>
- <li>Baba au rhum revisité avec son coulis de citron</li>
- <li>Tarte au citron meringuée destructurée</li>
+ <li class="listes">Macaron noisette et chocolat, glace au caramel brun et sel de Guérende</li>
+ <li class="listes">Baba au rhum revisité avec son coulis de citron</li>
+ <li class="listes">Tarte au citron meringuée destructurée</li>
  </ul>
 </section>
 <!--desserts-->
