--- a/menu2.html
+++ b/menu2.html
@@ -51,9 +51,9 @@
      <img class="icon-m2-2" src="images/sepm2-violet.png" alt="">
      </div>
 <ul class="ul-m2">
- <li class="li-m2-2">Coquilles Saint Jacques accompagnées d’une purée de panais<span class="prix">95€</span></li>
- <li class="li-m2-2">Magret de canard et parmentier de pommes de terres<span class="prix">88€</span></li>
- <li class="li-m2-2">Pigeonneau d’île et vilaine sur son lit de gnocchis aux legumes<span class="prix">175€</span></li>
+ <li class="li-m2-2">Coquilles Saint Jacques accompagnées d’une purée de panais<em class="prix">95€</em></li>
+ <li class="li-m2-2">Magret de canard et parmentier de pommes de terres<em class="prix">88€</em></li>
+ <li class="li-m2-2">Pigeonneau d’île et vilaine sur son lit de gnocchis aux legumes<em class="prix">175€</em></li>
 </ul>
 </section>
 <!--plats-->
