--- a/menu3.html
+++ b/menu3.html
@@ -29,39 +29,39 @@
 <section class="bloc">
   <div class="entree">
    <div class="btn"></div>
-   <h2 class="m-1"><span class="traitm3">Pour bien commencer</span></h2>
+   <h2 class="m-1"><em class="traitm3">Pour bien commencer</em></h2>
    <div class="btn2"></div>
     </div>
 <ul class="ul-m4">
-<li>Tartare de thon assaisonné au yuzu<span class="prix">55€</span> </li>
-<li>Boucher de homard croustillant et sa farandole de petits légumes<span class="prix">89€</span></li>
-<li>Velouté de cèpes aux truffes<span class="prix">56€</span></li>
+<li class="listes">Tartare de thon assaisonné au yuzu<span class="prix">55€</span> </li>
+<li class="listes">Boucher de homard croustillant et sa farandole de petits légumes<span class="prix">89€</span></li>
+<li class="listes">Velouté de cèpes aux truffes<span class="prix">56€</span></li>
 </ul>
 </section>
 
 <section class="bloc">
   <div class="plat">
 <div class="btn3"></div>
-<h2 class="m-1"><span class="traitm3">Pour bien continuer</span></h2>
+<h2 class="m-1"><em class="traitm3">Pour bien continuer</em></h2>
 <div class="btn4"></div>
 </div>
 <ul class="ul-m4">
-<li>Poulet rôti aux herbes de provence et sa crème aux truffe<span class="prix">110€</span></li>
-<li>Langouste rôtie et ses légumes de saison<span class="prix">225€</span></li>
-<li>Côte de boeuf angus et sa purée de pané<span class="prix">115€</span></li>
+<li class="listes">Poulet rôti aux herbes de provence et sa crème aux truffe<span class="prix">110€</span></li>
+<li class="listes">Langouste rôtie et ses légumes de saison<span class="prix">225€</span></li>
+<li class="listes">Côte de boeuf angus et sa purée de pané<span class="prix">115€</span></li>
 </ul>
 </section>
 
 <section class="bloc">
   <div class="dessert">
 <div class="btn5"></div>
-<h2 class="m-1"><span class="traitm3">Pour bien terminer</span></h2>
+<h2 class="m-1"><em class="traitm3">Pour bien terminer</em></h2>
 <div class="btn6"></div>
 </div>
 <ul class="ul-m4">
-<li>Farandole de desserts du chef<span class="prix">55€</span></li>
-<li>Crème brûlée revisité<span class="prix">60€</span></li>
-<li>Tiramisu à la noisette<span class="prix">55€</span></li>
+<li class="listes">Farandole de desserts du chef<span class="prix">55€</span></li>
+<li class="listes">Crème brûlée revisité<span class="prix">60€</span></li>
+<li class="listes">Tiramisu à la noisette<span class="prix">55€</span></li>
 </ul>
 </section>
 </div>
