--- a/menu4.html
+++ b/menu4.html
@@ -27,13 +27,13 @@
     <!--entree-->
   <div class="entree-m4">
   <div class="btnm4"></div>
-<h2 class="m-1"><span class="traitm4">Esquisse</span></h2>
+<h2 class="m-1"><em class="traitm4">Esquisse</em></h2>
 <div class="btnm4-2"></div>
 </div>
 <ul class="ul-m4">
-    <li>Fricassée d'escargot au piment d'espelette<span class="prix">60€</span></li>
-<li>Oeuf au plat assaisine à la truffe sur lit de caviar<span class="prix">55€</span></li>
-<li>Foie gras de canard mi-cuit et ses copeaux de truffe noire<span class="prix">65€</span></li>
+    <li class="listes">Fricassée d'escargot au piment d'espelette<span class="prix">60€</span></li>
+    <li class="listes">Oeuf au plat assaisine à la truffe sur lit de caviar<span class="prix">55€</span></li>
+    <li class="listes">Foie gras de canard mi-cuit et ses copeaux de truffe noire<span class="prix">65€</span></li>
 </ul>
     <!--entree-->
 
@@ -41,26 +41,26 @@
 
     <div class="entree-m4">
     <div class="btnm4"></div>
-<h2 class="m-1"><span class="traitm4">Oeuvre de maitre</span></h2>
+<h2 class="m-1"><em class="traitm4">Oeuvre de maitre</em></h2>
 <div class="btnm4-2"></div>
 </div>
 <ul class="ul-m4">
-<li>Filet de boeuf aux herbes accompagné de sa ribambelle de legumes<span class="prix">70€</span></li>
-<li>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais<span class="prix">85€</span></li>
-<li>Filet de turbot aux agrumes<span class="prix">125€</span></li>
+<li class="listes">Filet de boeuf aux herbes accompagné de sa ribambelle de legumes<span class="prix">70€</span></li>
+<li class="listes">Parmentier de queue de boeuf à la truffe noire sur sa purée de panais<span class="prix">85€</span></li>
+<li class="listes">Filet de turbot aux agrumes<span class="prix">125€</span></li>
 </ul>
 <!--plats-->
 
 <!--desserts-->
     <div class="entree-m4">
     <div class="btnm4"></div>
-<h2 class="m-1"><span class="traitm4">Au sommet de l'art</span></h2>
+<h2 class="m-1"><em class="traitm4">Au sommet de l'art</em></h2>
 <div class="btnm4-2"></div>
 </div>
 <ul class="ul-m4">
-<li>Paris-Brest revisité<span class="prix">55€</span></li>
-<li>Macaron de chocolat d'exception et glace à la vanille de Madagascar<span class="prix">65€</span></li>
-<li>Mousse au chocolat au piment d'espelette rt à la truffe noire<span class="prix">60€</span></li>
+<li class="listes">Paris-Brest revisité<span class="prix">55€</span></li>
+<li class="listes">Macaron de chocolat d'exception et glace à la vanille de Madagascar<span class="prix">65€</span></li>
+<li class="listes">Mousse au chocolat au piment d'espelette rt à la truffe noire<span class="prix">60€</span></li>
 </ul>
 </div>
 <!--desserts-->
