beautify code html css

--- a/mentionlegal.html
+++ b/mentionlegal.html
@@ -1,63 +1,70 @@
-
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Neucha&display=swap" rel="stylesheet">  
-  <link rel="stylesheet" href="./styles/partials/style.css">
-  <script src="https://kit.fontawesome.com/a2a69c8064.js" crossorigin="anonymous"></script>
-  <title>MENTIONS LEGALES</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Neucha&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/partials/style.css">
+    <script src="https://kit.fontawesome.com/a2a69c8064.js" crossorigin="anonymous"></script>
+    <title>MENTIONS LEGALES</title>
 </head>
+
 <body>
     <div id="bloc-page-mention">
-       <!--header html-->
-       <header class="header">
-        <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
-    </header>
+        <!--header html-->
+        <header class="header">
+            <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
+        </header>
         <!--header html-->
         <div id="container-mentions">
-<h2>MENTIONS LEGALES:</h2>
+            <h2>MENTIONS LEGALES:</h2>
 
-<p>Conformément aux dispositions des articles 6-III et 19 de la Loi n° 2004-575 du 21 juin 2004 pour la Confiance dans l'économie numérique, dite L.C.E.N., nous portons à la connaissance des utilisateurs et visiteurs du site : 
-    <a href="http://Www.autroncvert.fr" target="_blank">Www.autroncvert.fr</a> les informations suivantes :
-</p>
+            <p>Conformément aux dispositions des articles 6-III et 19 de la Loi n° 2004-575 du 21 juin 2004 pour la
+                Confiance dans l'économie numérique, dite L.C.E.N., nous portons à la connaissance des utilisateurs et
+                visiteurs du site :
+                <a href="http://Www.autroncvert.fr" target="_blank">Www.autroncvert.fr</a> les informations suivantes :
+            </p>
 
-<p><strong>ÉDITEUR</strong></p>
+            <p><strong>ÉDITEUR</strong></p>
 
-<p>Le site <a href="http://Www.autroncvert.fr" target="_blank">Www.autroncvert.fr</a> est la propriété exclusive de 
-    <strong>Entreprise individuel Au tronc vert</strong>, qui l'édite.
-</p>
+            <p>Le site <a href="http://Www.autroncvert.fr" target="_blank">Www.autroncvert.fr</a> est la propriété
+                exclusive de
+                <strong>Entreprise individuel Au tronc vert</strong>, qui l'édite.
+            </p>
 
-<p>Au tronc vert<br/>
-<strong>Entreprise individuel au capital de 20000 </strong>Tél  : <strong>0663060196</strong>
-</p>
+            <p>Au tronc vert<br />
+                <strong>Entreprise individuel au capital de 20000 </strong>Tél : <strong>0663060196</strong>
+            </p>
 
-<p><strong>21 rue principale 60790 Pouilly</strong><br/>
-Immatriculée au Registre du Commerce et des Sociétés de  <strong>0000000 </strong>sous le numéro<strong> 83495918100019</strong>
-</p>
+            <p><strong>21 rue principale 60790 Pouilly</strong><br />
+                Immatriculée au Registre du Commerce et des Sociétés de <strong>0000000 </strong>sous le numéro<strong>
+                    83495918100019</strong>
+            </p>
 
-<p>Numéro TVA intracommunautaire : <strong>000000</strong><br />
-Adresse de courrier électronique : <strong>Autronvert@gmail.com</strong> <br />
- <br />
-Directeur de la  publication : <strong>Quentin beillard</strong><br />
-Contactez le responsable de la publication : <strong>Beillard.quentin72@gmail.com</strong></p>
+            <p>Numéro TVA intracommunautaire : <strong>000000</strong><br />
+                Adresse de courrier électronique : <strong>Autronvert@gmail.com</strong> <br />
+                <br />
+                Directeur de la publication : <strong>Quentin beillard</strong><br />
+                Contactez le responsable de la publication : <strong>Beillard.quentin72@gmail.com</strong></p>
 
-<p><strong>HÉBERGEMENT</strong></p>
+            <p><strong>HÉBERGEMENT</strong></p>
 
-<p>Le site est hébergé par <strong>1&1 Ppppp 0000 Ppppp</strong><br />
-<strong>CREDITS :</strong>les mentions légales ont étés générées par <strong>
-    <a href="https://www.generer-mentions-legales.com">mentions légales</a></strong><br />
-Horaires de la <strong><a href="http://www.patinoire.biz/p+patinoire-de-lyon---charlemagne+113.html">Patinoire Lyon</a></strong>
-</p>
-<p class="important">les mentions legales ci-dessus ne sont pas valable, ceci est un projet d'école!!!</p>
+            <p>Le site est hébergé par <strong>1&1 Ppppp 0000 Ppppp</strong><br />
+                <strong>CREDITS :</strong>les mentions légales ont étés générées par <strong>
+                    <a href="https://www.generer-mentions-legales.com">mentions légales</a></strong><br />
+                Horaires de la <strong><a
+                        href="http://www.patinoire.biz/p+patinoire-de-lyon---charlemagne+113.html">Patinoire
+                        Lyon</a></strong>
+            </p>
+            <p class="important">les mentions legales ci-dessus ne sont pas valable, ceci est un projet d'école!!!</p>
+            <!--footer html-->
+            <footer id="bas">
+                <p><a class="mention" href="mentionlegal.html" target="blank">Mentions légales</a></p>
+                <p><a class="mail" href="mailto:ohmyfoodteam@yyy.com">Contactez nous</a></p>
+            </footer>
+        </div>
+    </div>
+</body>
 <!--footer html-->
-<footer id="bas">
-    <p><a class="mention" href="mentionlegal.html" target="blank">Mentions légales</a></p>
-        <p><a class="mail" href="mailto:ohmyfoodteam@yyy.com">Contactez nous</a></p>
-  </footer>
-  </div>
-  </div>
-  </body>
-  <!--footer html-->
