--- a/menu1.html
+++ b/menu1.html
@@ -1,86 +1,92 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Neucha&display=swap" rel="stylesheet">  
+  <link href="https://fonts.googleapis.com/css?family=Neucha&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles/partials/style.css">
   <script src="https://kit.fontawesome.com/a2a69c8064.js" crossorigin="anonymous"></script>
   <title>La note enchantée</title>
 </head>
+
 <body>
   <div id="container-m1">
-       <!--header html-->
-       <header class="header">
-        <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
+    <!--header html-->
+    <header class="header">
+      <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
     </header>
 
     <!--header html-->
     <h2 class="titre">La note enchantée</h2>
     <div class="carte-m1">
-    <!--entete-->
+      <!--entete-->
 
-  <section class="entete">
-    <img class="note1" src="https://img.icons8.com/dusk/128/000000/musical.png" alt="">
-     <h2 class="titrem1">La note enchantée</h2>
-</section>
-<!--entete-->
+      <section class="entete">
+        <img class="note1" src="https://img.icons8.com/dusk/128/000000/musical.png" alt="">
+        <h2 class="titrem1">La note enchantée</h2>
+      </section>
+      <!--entete-->
 
-<!--entrees-->
-<section>
-  <div class="essaie">
-    <img class="separateur-m1" src="images/separateur.png" alt="">
-    <h2 class="m-1"><em class="traitm1">Prélude</em></h2>
-    <img class="separateur-m1" src="images/separateur.png" alt="">
-  </div>
- <ul class="ul-m4">
-    <li class="listes">ravioles de foie gras accompagnés de leur crème à la truffe <span class="prix">98€</span></li> 
-    <li class="listes">Caviar osciètre sur blini a la farine de blé noir <span class="prix">115€</span></li>
-    <li class="listes">Homard et espuma de potiron mariné aux zests d'orange <span class="prix">89€</span></li>
-    <li class="listes">Foie gras de canard cuit entier, confiture de figue et pain toasté <span class="prix">105€</span></li>
-  </ul>
-  </section>
-  <!--entrees-->
-  <!--plats-->
-  <section>
-    <div class="essaie">
-      <img class="separateur-m1" src="images/separateur.png" alt="">
-      <h2 class="m-1"><em class="traitm1">Point d'orgue</em></h2>
-      <img class="separateur-m1" src="images/separateur.png" alt=""></div>
- <ul class="ul-m4">
- <li class="listes">Noix de coquilles Saint-jacques sur lit de pure de céleri-rave <span class="prix">102€</span></li>
- <li class="listes">Langoustine poêlée, purée de patate douce <span class="prix">205€</span></li>
- <li class="listes">Mijoté de queue de boeuf et riz sauvage aux zests de citron <span class="prix">169€</span></li>
- </ul>
-  </section>
-  <!--plats-->
-  <!--desserts-->
-  <section>
-    <div class="essaie">
-      <img class="separateur-m1" src="images/separateur.png" alt="">
-      <h2 class="m-1"><em class="traitm1">Mouvement final</em></h2>
-      <img class="separateur-m1" src="images/separateur.png" alt="">
+      <!--entrees-->
+      <section>
+        <div class="essaie">
+          <img class="separateur-m1" src="images/separateur.png" alt="">
+          <h2 class="m-1"><em class="traitm1">Prélude</em></h2>
+          <img class="separateur-m1" src="images/separateur.png" alt="">
+        </div>
+        <ul class="ul-m4">
+          <li class="listes">ravioles de foie gras accompagnés de leur crème à la truffe <span class="prix">98€</span></li>
+          <li class="listes">Caviar osciètre sur blini a la farine de blé noir <span class="prix">115€</span></li>
+          <li class="listes">Homard et espuma de potiron mariné aux zests d'orange <span class="prix">89€</span></li>
+          <li class="listes">Foie gras de canard cuit entier, confiture de figue et pain toasté <span class="prix">105€</span></li>
+        </ul>
+      </section>
+      <!--entrees-->
+      <!--plats-->
+      <section>
+        <div class="essaie">
+          <img class="separateur-m1" src="images/separateur.png" alt="">
+          <h2 class="m-1"><em class="traitm1">Point d'orgue</em></h2>
+          <img class="separateur-m1" src="images/separateur.png" alt="">
+        </div>
+        <ul class="ul-m4">
+          <li class="listes">Noix de coquilles Saint-jacques sur lit de pure de céleri-rave <span
+              class="prix">102€</span></li>
+          <li class="listes">Langoustine poêlée, purée de patate douce <span class="prix">205€</span></li>
+          <li class="listes">Mijoté de queue de boeuf et riz sauvage aux zests de citron <span class="prix">169€</span>
+          </li>
+        </ul>
+      </section>
+      <!--plats-->
+      <!--desserts-->
+      <section>
+        <div class="essaie">
+          <img class="separateur-m1" src="images/separateur.png" alt="">
+          <h2 class="m-1"><em class="traitm1">Mouvement final</em></h2>
+          <img class="separateur-m1" src="images/separateur.png" alt="">
+        </div>
+        <ul class="ul-m4">
+          <li class="listes">Macaron noisette et chocolat, glace au caramel brun et sel de Guérende</li>
+          <li class="listes">Baba au rhum revisité avec son coulis de citron</li>
+          <li class="listes">Tarte au citron meringuée destructurée</li>
+        </ul>
+      </section>
+      <!--desserts-->
+      <!--bas-->
+      <section class="bas-m1">
+        <img class="note2" src="https://img.icons8.com/dusk/64/000000/musical.png" alt="">
+        <h3 class="fin">La note enchantée</h3>
+      </section>
+      <!--bas-->
     </div>
-<ul class="ul-m4">
- <li class="listes">Macaron noisette et chocolat, glace au caramel brun et sel de Guérende</li>
- <li class="listes">Baba au rhum revisité avec son coulis de citron</li>
- <li class="listes">Tarte au citron meringuée destructurée</li>
- </ul>
-</section>
-<!--desserts-->
-<!--bas-->
-<section class="bas-m1">
-  <img class="note2" src="https://img.icons8.com/dusk/64/000000/musical.png" alt="">
-  <h3 class="fin">La note enchantée</h3>
-</section>
-<!--bas-->
-</div>
-<!--footer-->
-<footer id="bas">
-  <p><a class="mention" href="mentionlegal.html" target="_blank">Mentions légales</a></p>
+    <!--footer-->
+    <footer id="bas">
+      <p><a class="mention" href="mentionlegal.html" target="_blank">Mentions légales</a></p>
       <p><a class="mail" href="mailto:ohmyfoodteam@yyy.com">Contactez nous</a></p>
-</footer>
-</div>
+    </footer>
+  </div>
 </body>
+
 </html>
