--- a/menu3.html
+++ b/menu3.html
@@ -1,78 +1,83 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Kalam:400,700&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Kalam:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles/partials/style.css">
   <script src="https://kit.fontawesome.com/a2a69c8064.js" crossorigin="anonymous"></script>
   <title>Le délice des papilles</title>
 </head>
+
 <body>
- <div id="container-m-3">
+  <div id="container-m-3">
     <!--header html-->
     <header class="header">
       <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
     </header>
-  <!--header html-->
-  <!--titre-->
-  <h2 class="titre">Le délice des papilles</h2>
-  <!--titre-->
+    <!--header html-->
+    <!--titre-->
+    <h2 class="titre">Le délice des papilles</h2>
+    <!--titre-->
 
-  <!--container-->
+    <!--container-->
     <div id="carte-m3">
-    <section>
-<h2 class="gradient-m3">Le délice des papilles</h2>
-    </section>
-   
-<section class="bloc">
-  <div class="entree">
-   <div class="btn"></div>
-   <h2 class="m-1"><em class="traitm3">Pour bien commencer</em></h2>
-   <div class="btn2"></div>
+      <section>
+        <h2 class="gradient-m3">Le délice des papilles</h2>
+      </section>
+
+      <section class="bloc">
+        <div class="entree">
+          <div class="btn"></div>
+          <h2 class="m-1"><em class="traitm3">Pour bien commencer</em></h2>
+          <div class="btn2"></div>
+        </div>
+        <ul class="ul-m4">
+          <li class="listes">Tartare de thon assaisonné au yuzu<span class="prix">55€</span> </li>
+          <li class="listes">Boucher de homard croustillant et sa farandole de petits légumes<span
+              class="prix">89€</span></li>
+          <li class="listes">Velouté de cèpes aux truffes<span class="prix">56€</span></li>
+        </ul>
+      </section>
+
+      <section class="bloc">
+        <div class="plat">
+          <div class="btn3"></div>
+          <h2 class="m-1"><em class="traitm3">Pour bien continuer</em></h2>
+          <div class="btn4"></div>
+        </div>
+        <ul class="ul-m4">
+          <li class="listes">Poulet rôti aux herbes de provence et sa crème aux truffe<span class="prix">110€</span>
+          </li>
+          <li class="listes">Langouste rôtie et ses légumes de saison<span class="prix">225€</span></li>
+          <li class="listes">Côte de boeuf angus et sa purée de pané<span class="prix">115€</span></li>
+        </ul>
+      </section>
+
+      <section class="bloc">
+        <div class="dessert">
+          <div class="btn5"></div>
+          <h2 class="m-1"><em class="traitm3">Pour bien terminer</em></h2>
+          <div class="btn6"></div>
+        </div>
+        <ul class="ul-m4">
+          <li class="listes">Farandole de desserts du chef<span class="prix">55€</span></li>
+          <li class="listes">Crème brûlée revisité<span class="prix">60€</span></li>
+          <li class="listes">Tiramisu à la noisette<span class="prix">55€</span></li>
+        </ul>
+      </section>
     </div>
-<ul class="ul-m4">
-<li class="listes">Tartare de thon assaisonné au yuzu<span class="prix">55€</span> </li>
-<li class="listes">Boucher de homard croustillant et sa farandole de petits légumes<span class="prix">89€</span></li>
-<li class="listes">Velouté de cèpes aux truffes<span class="prix">56€</span></li>
-</ul>
-</section>
-
-<section class="bloc">
-  <div class="plat">
-<div class="btn3"></div>
-<h2 class="m-1"><em class="traitm3">Pour bien continuer</em></h2>
-<div class="btn4"></div>
-</div>
-<ul class="ul-m4">
-<li class="listes">Poulet rôti aux herbes de provence et sa crème aux truffe<span class="prix">110€</span></li>
-<li class="listes">Langouste rôtie et ses légumes de saison<span class="prix">225€</span></li>
-<li class="listes">Côte de boeuf angus et sa purée de pané<span class="prix">115€</span></li>
-</ul>
-</section>
-
-<section class="bloc">
-  <div class="dessert">
-<div class="btn5"></div>
-<h2 class="m-1"><em class="traitm3">Pour bien terminer</em></h2>
-<div class="btn6"></div>
-</div>
-<ul class="ul-m4">
-<li class="listes">Farandole de desserts du chef<span class="prix">55€</span></li>
-<li class="listes">Crème brûlée revisité<span class="prix">60€</span></li>
-<li class="listes">Tiramisu à la noisette<span class="prix">55€</span></li>
-</ul>
-</section>
-</div>
-<!--container-->
+    <!--container-->
 
     <!--footer html-->
     <footer id="bas">
       <p><a class="mention" href="mentionlegal.html" target="_blank">Mentions légales</a></p>
-          <p><a class="mail" href="mailto:ohmyfoodteam@yyy.com">Contactez nous</a></p>
-  </footer>
+      <p><a class="mail" href="mailto:ohmyfoodteam@yyy.com">Contactez nous</a></p>
+    </footer>
     <!--footer html-->
-    </div>
+  </div>
 </body>
+
 </html>
