--- a/menu4.html
+++ b/menu4.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=PT+Serif:700&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=PT+Serif:700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles/partials/style.css">
   <script src="https://kit.fontawesome.com/a2a69c8064.js" crossorigin="anonymous"></script>
   <title>La palette du goût</title>
 </head>
+
 <body>
   <div id="container-m4">
-     <!--header html-->
-        <header class="header">
-          <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
-      </header>
+    <!--header html-->
+    <header class="header">
+      <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
+    </header>
     <!--header html-->
 
     <h2 class="titre">La palette du goût</h2>
@@ -23,54 +25,59 @@
     <!--container-->
     <div id="carte-m4">
       <h2 class="gradient-m4">La palette du goût</h2>
-    
-    <!--entree-->
-  <div class="entree-m4">
-  <div class="btnm4"></div>
-<h2 class="m-1"><em class="traitm4">Esquisse</em></h2>
-<div class="btnm4-2"></div>
-</div>
-<ul class="ul-m4">
-    <li class="listes">Fricassée d'escargot au piment d'espelette<span class="prix">60€</span></li>
-    <li class="listes">Oeuf au plat assaisine à la truffe sur lit de caviar<span class="prix">55€</span></li>
-    <li class="listes">Foie gras de canard mi-cuit et ses copeaux de truffe noire<span class="prix">65€</span></li>
-</ul>
-    <!--entree-->
 
-    <!--plats-->
+      <!--entree-->
+      <div class="entree-m4">
+        <div class="btnm4"></div>
+        <h2 class="m-1"><em class="traitm4">Esquisse</em></h2>
+        <div class="btnm4-2"></div>
+      </div>
+      <ul class="ul-m4">
+        <li class="listes">Fricassée d'escargot au piment d'espelette<span class="prix">60€</span></li>
+        <li class="listes">Oeuf au plat assaisine à la truffe sur lit de caviar<span class="prix">55€</span></li>
+        <li class="listes">Foie gras de canard mi-cuit et ses copeaux de truffe noire<span class="prix">65€</span></li>
+      </ul>
+      <!--entree-->
 
-    <div class="entree-m4">
-    <div class="btnm4"></div>
-<h2 class="m-1"><em class="traitm4">Oeuvre de maitre</em></h2>
-<div class="btnm4-2"></div>
-</div>
-<ul class="ul-m4">
-<li class="listes">Filet de boeuf aux herbes accompagné de sa ribambelle de legumes<span class="prix">70€</span></li>
-<li class="listes">Parmentier de queue de boeuf à la truffe noire sur sa purée de panais<span class="prix">85€</span></li>
-<li class="listes">Filet de turbot aux agrumes<span class="prix">125€</span></li>
-</ul>
-<!--plats-->
+      <!--plats-->
 
-<!--desserts-->
-    <div class="entree-m4">
-    <div class="btnm4"></div>
-<h2 class="m-1"><em class="traitm4">Au sommet de l'art</em></h2>
-<div class="btnm4-2"></div>
-</div>
-<ul class="ul-m4">
-<li class="listes">Paris-Brest revisité<span class="prix">55€</span></li>
-<li class="listes">Macaron de chocolat d'exception et glace à la vanille de Madagascar<span class="prix">65€</span></li>
-<li class="listes">Mousse au chocolat au piment d'espelette rt à la truffe noire<span class="prix">60€</span></li>
-</ul>
-</div>
-<!--desserts-->
+      <div class="entree-m4">
+        <div class="btnm4"></div>
+        <h2 class="m-1"><em class="traitm4">Oeuvre de maitre</em></h2>
+        <div class="btnm4-2"></div>
+      </div>
+      <ul class="ul-m4">
+        <li class="listes">Filet de boeuf aux herbes accompagné de sa ribambelle de legumes<span class="prix">70€</span>
+        </li>
+        <li class="listes">Parmentier de queue de boeuf à la truffe noire sur sa purée de panais<span
+            class="prix">85€</span></li>
+        <li class="listes">Filet de turbot aux agrumes<span class="prix">125€</span></li>
+      </ul>
+      <!--plats-->
 
-<!--footer html-->
-<footer id="bas">
-  <p><a class="mention" href="mentionlegal.html" target="_blank">Mentions légales</a></p>
+      <!--desserts-->
+      <div class="entree-m4">
+        <div class="btnm4"></div>
+        <h2 class="m-1"><em class="traitm4">Au sommet de l'art</em></h2>
+        <div class="btnm4-2"></div>
+      </div>
+      <ul class="ul-m4">
+        <li class="listes">Paris-Brest revisité<span class="prix">55€</span></li>
+        <li class="listes">Macaron de chocolat d'exception et glace à la vanille de Madagascar<span
+            class="prix">65€</span></li>
+        <li class="listes">Mousse au chocolat au piment d'espelette rt à la truffe noire<span class="prix">60€</span>
+        </li>
+      </ul>
+    </div>
+    <!--desserts-->
+
+    <!--footer html-->
+    <footer id="bas">
+      <p><a class="mention" href="mentionlegal.html" target="_blank">Mentions légales</a></p>
       <p><a class="mail" href="mailto:ohmyfoodteam@yyy.com">Contactez nous</a></p>
-</footer>
-<!--footer html-->
-</div>
+    </footer>
+    <!--footer html-->
+  </div>
 </body>
+
 </html>
