--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <div id="container1">
         <!--head-->
         <header class="header">
             <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
@@ -22,14 +23,14 @@
         <!--barre de recherche-->
         <div class="recherche">
             <form action="post" method="get">
-                <input class="iconloupe" />
-            </form>
-        </div>
+              <input class="iconloupe"/>
+              </form>
+            </div>
         <!--barre de recherche-->
 
         <!--box-->
         <div id="box1">
-            <div class="menu"><a href="menu1.html"><img src="images/menu-1b.png" alt="la note enchantée"></a></div>
+            <div class="menu"><a href="menu1.html"><img  src="images/menu-1b.png" alt="la note enchantée"></a></div>
             <div class="menu"><a href="menu2.html"><img src="images/menu-2b.png" alt="le chic à la francaise"></a></div>
             <div class="menu"><a href="menu3.html"><img src="images/menu-3b.png" alt="le délice des papilles"></a></div>
             <div class="menu"><a href="menu4.html"><img src="images/menu-4b.png" alt="la palette du goût"></a></div>
@@ -37,15 +38,15 @@
         <!--box-->
 
         <!--prochainement-->
-        <p class="bientot">prochainement<span>.</span><span>.</span><span>.</span></p>
+                <p class="bientot">prochainement<span>.</span><span>.</span><span>.</span></p>   
         <!--prochainement-->
 
         <!--footer-->
         <footer id="bas">
             <p><a class="mention" href="mentionlegal.html" target="_blank">Mentions légales</a></p>
-            <p><a class="mail" href="mailto:ohmyfoodteam@yyy.com">Contactez nous</a></p>
+                <p><a class="mail" href="mailto:ohmyfoodteam@yyy.com">Contactez nous</a></p>
         </footer>
         <!--footer-->
-</body>
-
+    </div>
+ </body>
 </html>
