--- a/menu1.html
+++ b/menu1.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <div id="container-m1">
     <!--header html-->
     <header class="header">
       <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
@@ -36,12 +37,10 @@
           <img class="separateur-m1" src="images/separateur.png" alt="">
         </div>
         <ul class="ul-m4">
-          <li class="listes">ravioles de foie gras accompagnés de leur crème à la truffe <span class="prix">98€</span>
-          </li>
+          <li class="listes">ravioles de foie gras accompagnés de leur crème à la truffe <span class="prix">98€</span></li>
           <li class="listes">Caviar osciètre sur blini a la farine de blé noir <span class="prix">115€</span></li>
           <li class="listes">Homard et espuma de potiron mariné aux zests d'orange <span class="prix">89€</span></li>
-          <li class="listes">Foie gras de canard cuit entier, confiture de figue et pain toasté <span
-              class="prix">105€</span></li>
+          <li class="listes">Foie gras de canard cuit entier, confiture de figue et pain toasté <span class="prix">105€</span></li>
         </ul>
       </section>
       <!--entrees-->
