--- a/mentionlegal.html
+++ b/mentionlegal.html
@@ -18,6 +18,7 @@
             <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
         </header>
         <!--header html-->
+        <div id="container-mentions">
             <h2>MENTIONS LEGALES:</h2>
 
             <p>Conformément aux dispositions des articles 6-III et 19 de la Loi n° 2004-575 du 21 juin 2004 pour la
@@ -64,5 +65,6 @@
                 <p><a class="mail" href="mailto:ohmyfoodteam@yyy.com">Contactez nous</a></p>
             </footer>
         </div>
+    </div>
 </body>
 <!--footer html-->
