--- a/menu2.html
+++ b/menu2.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <div id="container-m-2">
     <!--header html-->
     <header class="header">
       <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
@@ -82,6 +83,7 @@
       <p><a class="mail" href="mailto:ohmyfoodteam@yyy.com">Contactez nous</a></p>
     </footer>
     <!--footer html-->
+  </div>
 </body>
 
 </html>
