--- a/menu3.html
+++ b/menu3.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <div id="container-m-3">
     <!--header html-->
     <header class="header">
       <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
@@ -76,6 +77,7 @@
       <p><a class="mail" href="mailto:ohmyfoodteam@yyy.com">Contactez nous</a></p>
     </footer>
     <!--footer html-->
+  </div>
 </body>
 
 </html>
