--- a/menu1.html
+++ b/menu1.html
@@ -16,7 +16,7 @@
   <header class="header">
     <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
   </header>
-
+<div id="conteneur">
   <!--header html-->
   <h2 class="titre">La note enchantée</h2>
   <div class="carte-m1">
@@ -81,6 +81,7 @@
       <h3 class="fin">La note enchantée</h3>
     </section>
     <!--bas-->
+  </div>
   </div>
   <!--footer-->
   <footer id="bas">
