--- a/menu2.html
+++ b/menu2.html
@@ -18,7 +18,7 @@
     <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
   </header>
   <!--header html-->
-
+<div id="conteneur">
   <!--titre-->
   <h2 class="titre">Le chic à la française</h2>
   <div id="carte-m2">
@@ -73,6 +73,7 @@
         <li class="li-m2-3">Millefeuille croustillant</li>
       </ul>
     </section>
+  </div>
   </div>
   <!--desserts-->
 
