--- a/menu4.html
+++ b/menu4.html
@@ -18,7 +18,7 @@
     <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
   </header>
   <!--header html-->
-
+ <div id="conteneur">
   <h2 class="titre">La palette du goût</h2>
 
   <!--container-->
@@ -67,6 +67,7 @@
       <li class="listes">Mousse au chocolat au piment d'espelette rt à la truffe noire<span class="prix">60€</span>
       </li>
     </ul>
+  </div>
   </div>
   <!--desserts-->
 
