--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </form>
     </div>
     <!--barre de recherche-->
-
+    <div id="conteneur">
     <!--box-->
     <div id="box1">
         <div class="menu"><a href="menu1.html"><img src="images/menu-1b.png" alt="la note enchantée"></a></div>
@@ -39,7 +39,7 @@
     <!--prochainement-->
     <p class="bientot">prochainement<span>.</span><span>.</span><span>.</span></p>
     <!--prochainement-->
-
+    </div>
     <!--footer-->
     <footer id="bas">
         <p><a class="mention" href="mentionlegal.html" target="_blank">Mentions légales</a></p>
